# calicchia-design-platform

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  AUDIT_2026-05-27_STATUS.md  CLIENT-PORTAL.md  GDPR-COMPLIANCE.md  README.md  dev.bat  dev.sh  docker-compose.dockhand.yml  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  takeout-dl.sh
.github/workflows/: build-admin-image.yml  build-api-image.yml  build-mcp-image.yml  build-radicale-image.yml  build-sito-image.yml  build-worker-image.yml  ci.yml
apps/admin/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js  vite.config.ts
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/mcp/: Dockerfile  README.md  package.json  tsconfig.json
apps/radicale/: .gitignore  Dockerfile  README.md  requirements.txt
apps/sito-v3/: .gitignore  Dockerfile  components.json  eslint.config.mjs  next.config.ts  package.json
apps/worker/: Dockerfile  README.md  package.json  tsconfig.json
calicchia-logo-package/: IMPLEMENTATION.md  README.md
docs/: admin-redesign-plan.md  clickup-research.md  database-migrations.md  database-rls.md  mcp-setup.md  portainer-cloudpanel.md
scripts/: backup-db.sh  gen-geo-whitepaper.mjs  generate-favicons.mjs  readme-screenshots.mjs  restore-db.sh
tools/preventivi/: pyproject.toml
tools/preventivi/examples/: rifacimento.json
tools/preventivi/src/: config.py  generator.py  main.py  models.py
tools/preventivi/templates/: preventivo.html
(+1187 files in other folders)
