[project]
name = "preventivi-generator"
version = "1.0.0"
description = "Generatore preventivi PDF per Calicchia Design"
requires-python = ">=3.10"
dependencies = [
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
preventivi = "src.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
